style: move poetic hint down to prevent overlap

--- a/public/style.css
+++ b/public/style.css
@@ -141,7 +141,7 @@ button:active {
 
 .poetic-hint {
     position: absolute;
-    top: 15%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
